After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 787872 - youtube: Don't drop reference we don't own in parse_json()
youtube: Don't drop reference we don't own in parse_json()
Status: RESOLVED FIXED
Product: libgdata
Classification: Platform
Component: General
git master
Other All
: Normal normal
: ---
Assigned To: libgdata-maint
libgdata-maint
Depends on:
Blocks:
 
 
Reported: 2017-09-19 07:09 UTC by Christophe Fergeau
Modified: 2017-09-19 10:45 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
youtube: Don't drop reference we don't own in parse_json() (1.09 KB, patch)
2017-09-19 07:09 UTC, Christophe Fergeau
committed Details | Review

Description Christophe Fergeau 2017-09-19 07:09:25 UTC
parse_json() unref's the passed in GDataParsable, but it does not own a
reference to it. This was causing runtime warnings/criticals when
testing a youtube URL with grilo-test-ui-0.3

Signed-off-by: Christophe Fergeau <cfergeau@redhat.com>
Comment 1 Christophe Fergeau 2017-09-19 07:09:29 UTC
Created attachment 360024 [details] [review]
youtube: Don't drop reference we don't own in parse_json()
Comment 2 Philip Withnall 2017-09-19 09:24:59 UTC
Review of attachment 360024 [details] [review]:

Good catch, thanks.
Comment 3 Christophe Fergeau 2017-09-19 10:45:54 UTC
Attachment 360024 [details] pushed as cd30c44 - youtube: Don't drop reference we don't own in parse_json()