youtube: Don't drop reference we don't own in parse_json()

parse_json() unref's the passed in GDataParsable, but it does not own a
reference to it. This was causing runtime warnings/criticals when
testing a youtube URL with grilo-test-ui-0.3

Signed-off-by: Christophe Fergeau <cfergeau@redhat.com>

https://bugzilla.gnome.org/show_bug.cgi?id=787872